# trabalho-final-trabalho_final_comp_microc

./: .gitignore  README.md  pyproject.toml
MicroC/: __main__.py  ast.py  ctx.py  erros.py  eval.py  grammar.lark  parser.py  semantic.py  transformer.py
examples/: bubblesort.mc  escopo_funcao.mc  escopo_global.mc  escopo_if.mc  escopo_local.mc  escopo_while.mc  example.mc  example.py  example_soma3.mc  exception_call_type.mc  exception_function_two.mc  exception_no_decl.mc  exception_no_return.mc  exception_return_type.mc  exception_scope.mc  exception_two_decl.mc  exception_type.mc  exception_type_op.mc  fib.mc  funcao.mc  var_decl.mc
tests/: test_microc.py
